# tokio

./: .gitmodules  Cargo.toml  TODO.md  add-example.sh  deny.toml  hack.md  pr7467.md  proposal.en.md  proposal.md  spellcheck.dic  test.pftrace  todo.md  worker-trace.md
.github/: labeler.yml
.github/workflows/: audit.yml  ci.yml  k.yml  k2.yml  k3.yml  kernel-version-test.yml  loom.yml  pr-audit.yml
benches/: Cargo.toml  fs.rs  many_spawn_blocking_thread2.rs  tracing.rs
examples/: Cargo.toml  async_buf_read_ext.rs  async_read_cancel_not_safe.rs  bench.js  check_future_size.rs  echo.rs  file_perf_experiment.rs  flamegraph_mpsc.rs  framed_read.rs  framehop_experiment.rs  fs_bench_io_uring.rs  fs_bench_spawn_blocking.rs  get_resume_point_experiment.rs  global_queue_interval_bugs.rs  hello_world.rs  issue_5784.rs  issue_6505.rs  issue_6519.rs  issue_6519_example.rs  issue_6651.rs  issue_6682.rs  issue_6749.rs  issue_6760.rs  issue_6767.rs  k6.js  localset.rs  notify_play.rs  pr_6497.rs  runtime-tracing.rs  see_runtime_embeded_tracing.rs  stream_map.rs  test_macro.rs  timer_bench.rs  tinyhttp.rs  tokio_trace_logs.rs  tokio_util_mpsc.rs  trace_macro_decrust.rs  unwindsafe_matter.rs  uring.rs  uring_fs.rs  (+3 more)
tokio/: Cargo.toml
tokio-macros/src/: lib.rs
tokio-util/: Cargo.toml
tokio-util/src/: cfg.rs
tokio-util/src/sync/: mod.rs
tokio/src/: lib.rs
tokio/src/fs/: file.rs  metadata.rs  mocks.rs  mod.rs  open_options.rs  read.rs  read_dir.rs  write.rs
tokio/src/fs/file/: thread_pool.rs  uring.rs
tokio/src/fs/open_options/: uring.rs  uring_open_options.rs
tokio/src/future/: maybe_done.rs  mod.rs
tokio/src/io/: blocking.rs  mod.rs  poll_evented.rs  ready.rs  stderr.rs  stdout.rs
tokio/src/io/uring/: metadata.rs  mod.rs  open.rs  read.rs  write.rs
tokio/src/io/util/: async_read_ext.rs  async_seek_ext.rs  async_write_ext.rs  buf_reader.rs  buf_writer.rs  chain.rs  copy.rs  copy_bidirectional.rs  empty.rs  mem.rs  mod.rs  read_exact.rs  repeat.rs  sink.rs  write_all_buf.rs
tokio/src/macros/: cfg.rs  select.rs
tokio/src/net/tcp/: listener.rs  socket.rs  split.rs  split_owned.rs  stream.rs
tokio/src/net/unix/: listener.rs  ucred.rs
tokio/src/process/: mod.rs
tokio/src/process/unix/: mod.rs  orphan.rs
tokio/src/runtime/: builder.rs  context.rs  coop.rs  driver.rs  dump.rs  handle.rs  mod.rs  op_id.rs  park.rs  runtime.rs  thread_id.rs
tokio/src/runtime/blocking/: pool.rs
tokio/src/runtime/context/: runtime.rs
tokio/src/runtime/driver/: op.rs
tokio/src/runtime/io/: driver.rs  mod.rs  registration.rs  registration_set.rs  scheduled_io.rs
tokio/src/runtime/io/driver/: uring.rs
tokio/src/runtime/io/uring/: driver.rs  mod.rs  registration_set.rs  scheduled_io.rs
tokio/src/runtime/scheduler/: inject.rs  mod.rs  util.rs
tokio/src/runtime/scheduler/current_thread/: mod.rs
tokio/src/runtime/scheduler/multi_thread/: handle.rs  idle.rs  mod.rs  park.rs  queue.rs  stats.rs  worker.rs
tokio/src/runtime/task/: core.rs  harness.rs  join.rs  list.rs  mod.rs  raw.rs  state.rs  waker.rs
tokio/src/runtime/task/trace/: mod.rs  symbol.rs  tree.rs
tokio/src/runtime/tests/: mod.rs  queue.rs  task.rs  task_combinations.rs
tokio/src/runtime/time/: entry.rs  mod.rs  source.rs  timer.rs
tokio/src/runtime/time/wheel/: entry.rs  level.rs  mod.rs
tokio/src/signal/: mod.rs  windows.rs
tokio/src/signal/windows/: stub.rs  sys.rs
tokio/src/sync/: batch_semaphore.rs  broadcast.rs  notify.rs  oneshot.rs  semaphore.rs  watch.rs
tokio/src/sync/mpsc/: array.rs  block.rs  bounded.rs  chan.rs  list.rs  mod.rs
tokio/src/sync/task/: atomic_waker.rs
tokio/src/sync/tests/: loom_oneshot.rs  loom_semaphore_batch.rs  semaphore_batch.rs
tokio/src/task/: builder.rs  spawn.rs  task_local.rs
tokio/src/task/coop/: mod.rs
tokio/src/time/: sleep.rs
tokio/src/util/: backoff.rs  idle_notified_set.rs  linked_list.rs  mod.rs  ptr_expose.rs  rand.rs  trace.rs  try_lock.rs  wake_list.rs
tokio/src/util/rand/: rt.rs
tokio/tests/: dump.rs  fs_uring.rs  io_async_fd.rs  io_copy_bidirectional.rs  macros_select.rs  sync_mpsc.rs  task_hooks.rs  tcp_stream.rs
tokio/tests/support/: oob_data.rs
tracing-flight-recorder/: Cargo.toml  README.md
tracing-flight-recorder/examples/: hello.rs
tracing-flight-recorder/src/: build.rs  lib.rs
tracing-flight-recorder/src/proto/: items.proto
tracing-perfetto/: Cargo.toml  build.rs  test.pftrace
tracing-perfetto/examples/: hello.rs
tracing-perfetto/src/: lib.rs  main.rs  perfetto.proto.rs  perfetto_symbolize.rs
