[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
tokio = { version = "1.0.0", path = "../tokio", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", path = "../tokio-util", features = ["full"] }
tokio-stream = { version = "0.1", path = "../tokio-stream" }

async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log", "time", "std", "json"] }
tracing-appender = "0.2"
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-sink = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
httpdate = "1.0"
once_cell = "1.5.2"
rand = "0.8.3"
pin-project-lite = "0.2.11"
test-log = "0.2.15"
test-case = "3.3.1"
framehop = "0.12"
wholesym = "0.7"

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.52"

[[example]]
name = "chat"
path = "chat.rs"

[[example]]
name = "connect"
path = "connect.rs"

[[example]]
name = "echo-udp"
path = "echo-udp.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "print_each_packet"
path = "print_each_packet.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "tinydb"
path = "tinydb.rs"

[[example]]
name = "udp-client"
path = "udp-client.rs"

[[example]]
name = "udp-codec"
path = "udp-codec.rs"

[[example]]
name = "tinyhttp"
path = "tinyhttp.rs"

[[example]]
name = "custom-executor"
path = "custom-executor.rs"

[[example]]
name = "custom-executor-tokio-context"
path = "custom-executor-tokio-context.rs"

[[example]]
name = "named-pipe"
path = "named-pipe.rs"

[[example]]
name = "named-pipe-ready"
path = "named-pipe-ready.rs"

[[example]]
name = "named-pipe-multi-client"
path = "named-pipe-multi-client.rs"

[[example]]
name = "dump"
path = "dump.rs"

[[example]]
name = "watch_play"
path = "watch_play.rs"

[[example]]
name = "issue_5784"
path = "issue_5784.rs"

[[example]]
name = "framed_read"
path = "framed_read.rs"
[[example]]
name = "tokio_util_mpsc"
path = "tokio_util_mpsc.rs"
[[example]]
name = "stream_map"
path = "stream_map.rs"
[[example]]
name = "file_perf_experiment"
path = "file_perf_experiment.rs"
[[example]]
name = "async_buf_read_ext"
path = "async_buf_read_ext.rs"
[[example]]
name = "async_read_cancel_not_safe"
path = "async_read_cancel_not_safe.rs"
[[example]]
name = "global_queue_interval_bugs"
path = "global_queue_interval_bugs.rs"
[[example]]
name = "test_macro"
path = "test_macro.rs"
[[example]]
name = "see_runtime_embeded_tracing"
path = "see_runtime_embeded_tracing.rs"
[[example]]
name = "pr_6497"
path = "pr_6497.rs"
[[example]]
name = "issue_6519"
path = "issue_6519.rs"
[[example]]
name = "issue_6519_example"
path = "issue_6519_example.rs"
[[example]]
name = "issue_6505"
path = "issue_6505.rs"
[[example]]
name = "notify_play"
path = "notify_play.rs"
[[example]]
name = "trace_macro_decrust"
path = "trace_macro_decrust.rs"
[[example]]
name = "tokio_trace_logs"
path = "tokio_trace_logs.rs"
[[example]]
name = "get_resume_point_experiment"
path = "get_resume_point_experiment.rs"
[[example]]
name = "framehop_experiment"
path = "framehop_experiment.rs"
[[example]]
name = "check_future_size"
path = "check_future_size.rs"
[[example]]
name = "issue_6682"
path = "issue_6682.rs"
[[example]]
name = "issue_6749"
path = "issue_6749.rs"
[[example]]
name = "issue_6651"
path = "issue_6651.rs"
[[example]]
name = "issue_6760"
path = "issue_6760.rs"
[[example]]
name = "issue_6767"
path = "issue_6767.rs"
[[example]]
name = "unwindsafe_matter"
path = "unwindsafe_matter.rs"
