[package]
name = "tracing-flight-recorder"
version = "0.2.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Provides compatibility between `tracing` and the `log` crate.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing", "log"]
license = "MIT"
readme = "README.md"
rust-version = "1.63.0"

build = "src/build.rs"

[features]
default = []

[dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prost = "0.12"
bytes = "1"
prost-types = "0.12"
prost-build = "0.12"
protobuf = "3"

[dev-dependencies]

[build-dependencies]
prost-build = "0.12"

[badges]
maintenance = { status = "actively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
